--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -3,8 +3,8 @@ on:
   # Manual trigger
   workflow_dispatch:
   push:
-    paths:
-      - '*/**'
+    branches:
+      - main
   pull_request:
     branches: [ main ]
 defaults:
